# ModernClawMulti

./: .gitignore  CURATOR-SYSTEM-CONFIG.md  DOC_PACK_AUDIT.md  EXPRESSIVE_SPEECH_SHAPING_PLAN.md  JOE_SUPPORT_BRAIN_BLUEPRINT.md  MAC_MULTI_DIFF_SUMMARY.md  MODERNCLAW_BASE_SPLIT_PLAN.md  MULTI_BRAIN_IMPLEMENTATION_PLAN.md  MULTI_BRAIN_STATUS.md  MULTI_BRAIN_TEST_PLAN.md  MVP_EXTENSION_PLAN.md  NEXT_PROGRESS.md  NOTEBOOKLM-CURATOR-WORKFLOW.md  README.md  ROSIE_PRODUCT_ARCHITECT_BLUEPRINT.md  ROSIE_REVIEW_TEMPLATE.md  ROSIE_SOUL.md  ROSIE_USER.md  ROSIE_VERIFIER_SPEC.md  RUNBOOK.md  SUGGESTION_SYSTEM_SPEC.md  WINDOWS_MULTI_MAC_PARITY_PORT_PLAN.md
CURATOR_REQUESTS/: TEMPLATE-knowledge-request.md
CURATOR_TASKS/: TEMPLATE-knowledge-request.md  modernclaw-curator-agent.md  modernclaw-notebooklm-curator.md
KNOWLEDGE_PACK_MODERNCLAW/: README.md  modernclaw-brain.md  (+10 more)
local-ai/src-tauri/: Cargo.toml  tauri.conf.json
local-ai/src-tauri/capabilities/: default.json
local-ai/src-tauri/icons/: icon.icns
local-ai/src-tauri/src/: lib.rs  main.rs
local-ai/src-tauri/src/commands/: agents.rs  chat.rs  history.rs  memory.rs  mod.rs  settings.rs  setup.rs  voice.rs
local-ai/src-tauri/src/migrations/: 001_initial.sql  002_multi_brain_foundations.sql  003_agent_voice_settings.sql  004_message_feedback.sql  005_message_attachments.sql  006_message_feedback_note.sql
local-ai/src-tauri/src/services/: agent_repo.rs  context.rs  conversation_repo.rs  database.rs  llama_cpp.rs  memory.rs  message_repo.rs  mod.rs  ollama.rs  provider.rs
local-ai/src-tauri/src/types/: mod.rs
(+109 files in other folders)
